# weather_predictor

./: .gitignore  HACKATHON_GUIDE.md  LICENSE  README.md  api_server.py  app.py  config.py  database.py  debug_test.py  demo.py  field_check.py  main.py  nasa_data_service.py  quick_test.py  requirements.txt  setup_database.py  start_server.py  test_api.py  test_components.py  test_gemini_models.py  weather.csv  weather_api_service.py  weather_predictions.ipynb  weather_processor.py
desktop/: README.md  package-lock.json  package.json  vite.config.js
desktop-app/: index.html  main.js  package-lock.json  package.json
desktop-app/js/: api.js  app.js  charts.js  ui.js
desktop-app/styles/: main.css
desktop/src/: index.html  script.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: FILE_STRUCTURE.md  README.md
mobile/: README.md
models/: scaler.pkl  very_cold_model.pkl  very_hot_model.pkl  very_wet_model.pkl  very_windy_model.pkl
scripts/: INSTALLATION_GUIDE.md  README.md  install-prerequisites.ps1  verify-installation.ps1  verify-simple.ps1
services/: gemini.py  location.py  location_service.py  nasa_power.py  nasa_power_client.py  weather_risk_analyzer.py
static/: script.js  style.css
templates/: index.html
website/: README.md
