[package]
name = "weatherwise-desktop"
version = "1.0.0"
description = "WeatherWise Desktop App - Weather prediction for outdoor activities"
authors = ["deb00pam"]
license = "MIT"
repository = ""
default-run = "weatherwise-desktop"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "http-all", "shell-open"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "weatherwise-desktop"
path = "src/main.rs"
